--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -1179,18 +1179,16 @@ In {productname} 6.4, a fix was applied that replaced the previous selector, `ar
 === The colour picker reset to default when formatting pre element with addtional format options
 //#TINY-9342
 
-// Cause
-// Consequence
-// Fix
-// Result
+In previous versions of {productname}, formatting elements with a `pre-formatted` tag, and applying a background color from the color swatch would cause formatting issues when additional formatting options such as bold and italics were applied to the `pre-formatted` element. When these formatting conditions were combined, the color picker would reset the users defined color value, which would triggered the color picker to reset this value to default "000000".
+
+In {productname} 6.4, this issue has been resolved. Any pre-formatted elements what have additional formatting such as a color from the color picker no longer reset to its default color.
 
 === Editor increases the height indefinitely when using autoresize with content_css document
 //#TINY-8872
 
-// Cause
-// Consequence
-// Fix
-// Result
+In previous versions of {productname}, It was discovered that the editor had some issues with the autoresize function when using content_css documents, which caused the editor to have a indefinite height when content was being added.
+
+To fix this issue, {productname} 6.4 fixed this issue by addressing the conflict between the document skin's CSS and the autoresize bottom margin setting. After this fix, the resize function now checks for loops and considers the margin bottom as always set to 0 instead of autoresize bottom margin, which ensutes that the editor's height is calculated correctly. 
 
 === Plugin - Search and Replace - Throws a JS console error if you search for a string that doesn't exist and try to click on the preferences button.
 //#TINY-9686
