Consistency in quotation marks is a good thing.
Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/pages/advcode.adoc
+++ b/modules/ROOT/pages/advcode.adoc
@@ -47,7 +47,7 @@ tinymce.init({
   selector: "textarea",  // change this value according to your HTML
   advcode_inline: true,
   plugins: [
-    "fullscreen", 'advcode',
+    "fullscreen", "advcode",
   ],
   toolbar: "code"
 });
