--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -911,23 +911,20 @@ As a result, the `focus` dialog border now renders correctly in {productname} 6.
 
 === It was possible to open links inside the editor if the editor root was noneditable
 //#TINY-9470
-
-Setting the `contenteditable` property to the editor root to `false` such as the below example, would result in `contenteditable="false"` elements meant that `links` could be navigable.
-
+While setting the editor root to `contenteditable="false"`, it was discovered that links could still be opened, even in instances where the editor was setup as the below:
+.Example setup
 [source, js]
 ----
-setup: (editor) => {
-    editor.on('preinit', () => {
-        editor.getBody().contenteditable="false";
-    });
-}
+tinymce.init({
+    selector: "textarea",
+    plugins: [
+    ],
+    init_instance_callback: (editor) => {
+      editor.getBody().contentEditable = 'false';
+    }
+});
 ----
-
-As a result, links could be opened within the `iframe` element.
-
-In {productname} 6.4, links can no longer be navigable by clicking on them while they are inside a `contenteditable="false"` root, after a blocker was implemented to avoid this event `action`.
-
-In {productname} 6.4, all links in a `contenteditable="false"` now behave as expected.
+As a result, {productname} now blocks links from being selected while inside a `contenteditable="false"` root.
 
 === Inline boundary was rendered for noneditable inline boundary elements
 //#TINY-9471
