--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -808,7 +808,7 @@ As a result, the quickbar no longer opens in {productname} v6.4+, when the user 
 
 In previous versions of {productname}, `contenteditable="false"` elements that were nested within another such as a element set with the `contenteditable="false"` attribute, would avoid the `contenteditable="false"` guidelines set. As a consequence, selection of images, hrs, tables or `contenteditable="false"` elements was possible if they were nested within a `contenteditable="false"` element.
 
-Improvements were made to the `SelectionOverride` to now check if the DOM parent node is either set as a `contenteditable="true"` element or as a `contenteditable="false"` element.
+Improvements were made to check if the DOM parent node is a `contenteditable="false"` element.
 
 In {productname} 6.4, elements with `contenteditable="false"` attributes can no longer be selected when they are children of another `contenteditable="false"` attribute, such as:
 
