--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -565,7 +565,7 @@ In previous versions of {productname}, the top right close 'x' button within the
 
 With the latest release of {productname} 6.4, users can now navigate through all dialogs that have a `x` close button. With these updates, users can now use the `Tab` key to move through the elements within the modal dialogue, making it more accessible and user-friendly. 
 
-This the change is applied to all dialogs that have a `x` close button within {productname}.
+This change is applied to all dialogs that have a `x` close button within {productname}.
 
 * Search and Replace
 * Accessibility Checker
