--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -731,7 +731,7 @@ To correct this, {productname} added a new set icon fill function to ensure that
 
 In {productname} 6.4, this issue has be rectified, which now ensures that the foreground and background menu icons now accurately reflects the previously selected color within the menu dropdown swatch.
 
-=== Added new setIconFill function to NestedMenuItemInstanceApi
+=== Added new setIconFill function to editor.ui.addNestedMenuItem
 //#TINY-9497
 
 In previous versions of {productname} up until the changes and improvements made with the release of v6.4, the foreground and background menu icons would not properly update to display the last used color, as outlined in the above.
